--- a/app/src/main/res/layout/activity_generate_qr.xml
+++ b/app/src/main/res/layout/activity_generate_qr.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textShow"
+        android:padding="10dp"
         android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
@@ -32,6 +33,7 @@
             android:id="@+id/input_et"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/bg"
             android:layout_marginRight="8dp"
             android:layout_weight="3"
             android:hint="Enter text or link"
@@ -45,10 +47,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1.1"
             android:gravity="center"
-            android:background="@color/black"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:background="@drawable/bg"
             android:text="Generate"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="14sp" />
 
     </LinearLayout>
@@ -71,6 +75,7 @@
         android:layout_below="@id/output_iv"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
+        android:background="@drawable/button_bg"
         android:backgroundTint="#3CB371"
         android:fontFamily="sans-serif-medium"
         android:text="Save to Gallery"
