--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:id="@+id/generateQR"
         android:padding="20dp"
+        android:orientation="vertical"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
@@ -47,6 +48,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:orientation="vertical"
         android:layout_below="@+id/generateQR"
         android:layout_height="250dp">
 
