--- a/app/src/main/res/layout/activity_scan_qr.xml
+++ b/app/src/main/res/layout/activity_scan_qr.xml
@@ -21,8 +21,9 @@
 
     <Button
         android:id="@+id/scan_bn"
-        android:layout_width="140dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_bg"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:backgroundTint="#8A2BE2"
@@ -34,6 +35,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg"
         android:layout_centerInParent="true"
         android:layout_marginHorizontal="5dp"
         android:orientation="vertical"
@@ -56,6 +58,7 @@
             android:layout_marginHorizontal="18dp"
             android:layout_marginTop="15dp"
             android:backgroundTint="#7B68EE"
+            android:background="@drawable/button_bg"
             android:text="Tap to Copy"
             android:fontFamily="sans-serif-condensed-medium"
             android:textAllCaps="false" />
