--- a/app/src/main/res/layout/activity_generate_qr.xml
+++ b/app/src/main/res/layout/activity_generate_qr.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#A68282"
+    android:padding="15dp"
     tools:context=".GenerateQr">
     
     <TextView
@@ -64,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
+        android:background="@drawable/bg"
         android:padding="20dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_baseline_image_24" />
