--- a/app/src/main/res/layout/activity_scan_qr.xml
+++ b/app/src/main/res/layout/activity_scan_qr.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg"
+        android:id="@+id/i"
         android:layout_centerInParent="true"
         android:layout_marginHorizontal="5dp"
         android:orientation="vertical"
@@ -62,7 +63,7 @@
             android:text="Tap to Copy"
             android:fontFamily="sans-serif-condensed-medium"
             android:textAllCaps="false" />
-
     </LinearLayout>
+
 
 </RelativeLayout>
